samples/_failures_safe/1761265166_fbf622_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8e8724f.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_d8e8724f.c:167:5: error: expected declaration or statement at end of input
  167 |     if (match_token(parser, TOKEN_NUMBER, NULL) || match_token(parser, TOKEN_IDENTIFIER, NULL)) {
      |     ^~
./samples/SAFE/__tmp_d8e8724f.c:167:5: error: expected declaration or statement at end of input
